--- a/ChatClient/Input.xaml
+++ b/ChatClient/Input.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatClient"
         mc:Ignorable="d"
-        Title="Вход" Height="342" Width="417" Loaded="Window_Loaded">
+        Title="Вход" Height="342" Width="417" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
     <Grid>
         <Button x:Name="bConnDicon" Content="Connect" Click="Button_Click" HorizontalAlignment="Center" Height="48" Margin="0,207,0,0" VerticalAlignment="Top" Width="174" Grid.Column="1"/>
         <TextBox x:Name="tbUserName" Height="48" Margin="102,116,82,0" TextWrapping="Wrap" Text="Имя юзера" VerticalAlignment="Top" Grid.Column="1"/>
