--- a/ChatClient/MainWindow.xaml
+++ b/ChatClient/MainWindow.xaml
@@ -5,28 +5,28 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ChatClient"
         mc:Ignorable="d"
-        Title="Chat" Height="426" Width="572" Closing="Window_Closing" Loaded="Window_Loaded">
+        Title="Chat" MinHeight="430" MinWidth="580" Width="Auto" Closing="Window_Closing" Loaded="Window_Loaded" WindowStartupLocation="CenterScreen">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="47*"/>
             <ColumnDefinition Width="97*"/>
             <ColumnDefinition Width="142*"/>
         </Grid.ColumnDefinitions>
-        <TabControl x:Name="tcChat" Grid.ColumnSpan="3" SelectionChanged="tcChat_SelectionChanged" >
-            <TabItem Header="Чаты" Height="30" Width="80">
+        <TabControl x:Name="tcChat" Grid.ColumnSpan="3" SelectionChanged="tcChat_SelectionChanged">
+            <TabItem Header="Чаты" Height="30" MinWidth="80">
                 <TabItem.Content>
                     <Grid>
                         <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="53*"/>
-                            <ColumnDefinition Width="513*"/>
+                            <ColumnDefinition Width="0*"/>
+                            <ColumnDefinition/>
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
                             <RowDefinition Height="*"/>
                             <RowDefinition Height="0.2*"/>
                         </Grid.RowDefinitions>
                         <ListBox x:Name="lbUsers" Grid.Row="0" SelectionChanged="lbUsers_SelectionChanged" FontSize="20" Grid.ColumnSpan="2"/>
-                        <Button x:Name="bDisconnect" Content="Выйти" Grid.Row="1" Height="50" Width="100" Click="bDisconnect_Click" Grid.Column="1" Margin="180,6,233,6"/>
-                        <TextBlock x:Name="tbName" HorizontalAlignment="Left" Margin="10,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Height="34" Width="178" Grid.ColumnSpan="2"/>
+                        <Button x:Name="bDisconnect" Content="Выйти" Grid.Row="1" Click="bDisconnect_Click" Grid.Column="1" MaxHeight="45" MaxWidth="100"/>
+                        <TextBlock x:Name="tbName" HorizontalAlignment="Left" Margin="15,10,0,0" Grid.Row="1" TextWrapping="Wrap" VerticalAlignment="Top" Height="34" Width="163" Grid.Column="1"/>
                     </Grid>
                 </TabItem.Content>
             </TabItem>
